Bug 1609006 - 0x0 canvas yields 1x1 webgl context. r=lsalzman

Also, always resize, not just on change. (As per spec)

Differential Revision: https://phabricator.services.mozilla.com/D59967

--HG--
extra : moz-landing-system : lando